<resources>
    <string name="app_name" translatable="false">Nobird</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_button">Sign in with Twitter</string>
    <string name="error_twitter_api">Critical Twitter API error</string>
    <string name="processing">Processing…</string>
    <string name="error_account_init">Unable to retrieve your account</string>
    <string name="fragment_home_tab_feed">Feed</string>
    <string name="fragment_home_tab_mentions">Mentions</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="username_placeholder" translatable="false">\@%s</string>
    <string name="digit_placeholder" translatable="false">%d</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="type_something">Type something…</string>
    <string name="fragment_create_status_title">New tweet</string>
    <string name="action_block">Block</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="success_followed">You have followed @%s</string>
    <string name="success_unfollowed">You have unfollowed @%s</string>
    <string name="error_twitter_88">Limit of Twitter API calls was exceeded. Please try again later.</string>
    <string name="action_mute">Mute</string>
    <string name="action_unmute">Unmute</string>
    <string name="success_muted">You have muted @%s</string>
    <string name="success_unmuted">You have unmuted @%s</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_spam">Report for Spam</string>
    <string name="success_blocked">You have blocked @%s</string>
    <string name="success_unblocked">You have unblocked @%s</string>
    <string name="success_spam_reported">You have reported about spam from @%s</string>
    <string name="action_message">Direct Message</string>
    <string name="fragment_status">Tweet</string>
    <string name="in_reply_to">In reply to…</string>
    <string name="btn_reply">Reply</string>
    <string name="btn_like">Like</string>
    <string name="btn_retweet">Retweet</string>
    <string name="btn_export">Exort</string>
    <string name="export_dialog_copy_tweet_text">Copy tweet text</string>
    <string name="export_dialog_copy_tweet_link">Copy link to tweet</string>
    <string name="show_retweeters">List of retweets</string>
    <string name="show_likers">List of likes</string>
    <string name="send">Send</string>
    <string name="error_location">Unable to retrieve your location</string>
    <string name="draft_dialog_title">Draft</string>
    <string name="draft_dialog_message">Do you want to save this tweet to drafts?</string>
    <string name="action_destroy_status">Delete tweet</string>
    <string name="success_status_destroyed">Tweet was deleted</string>
    <string name="error_status_publish">An error has been occurred while trying to publish your status</string>
    <string name="success_status_publish">Status has been succefully published</string>
    <string name="process_status_publish">Publishing your status…</string>
    <string name="drafts">Drafts</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="lists">Lists</string>
    <string name="feed_counter_text">%d new tweets</string>
    <string name="active">active</string>
    <string name="dialog_fragment_account_add">Add account</string>
    <string name="search_action_statuses">Statuses with %s</string>
    <string name="search_action_users">Users with %s</string>
    <string name="search_action_go_to_user">Go to user @%s</string>
    <string name="action_create_saved_search">Save</string>
    <string name="action_destroy_saved_search">Remove saved search</string>
    <string name="drawer_edit_account">Edit account</string>
    <string name="drawer_analytics">Stats</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_messages">Messages</string>
</resources>
