<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_reply"
        android:visible="true"
        android:title="@string/btn_reply"
        android:icon="@drawable/ic_reply"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_message"
        android:visible="false"
        android:title="@string/action_message"
        android:icon="@drawable/ic_dm"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_follow"
        android:title="@string/follow"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_unfollow"
        android:title="@string/unfollow"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_mute"
        android:title="@string/action_mute"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_unmute"
        android:title="@string/action_unmute"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_block"
        android:title="@string/action_block"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_unblock"
        android:title="@string/action_unblock"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_spam"
        android:title="@string/action_spam"
        app:showAsAction="never"/>
</menu>
