<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/mountain"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/account_fragment_title"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="120dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/account_fragment_sign_in"
        android:layout_alignParentBottom="true"
        android:paddingBottom="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in_button"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/account_fragment_processing"
        android:layout_alignParentBottom="true"
        android:paddingBottom="16dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:text="@string/processing"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"/>

    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/account_fragment_web">
    </WebView>
</RelativeLayout>